# powdr-revme

evm/: Cargo.toml  run-all-tests-in-qemu-fast.py  run-all-tests-in-qemu.py  run-statistics.ods  steps.csv  steps2.csv
evm/qemu-plugin/: Makefile  insn.c
evm/src/: gen.py  main.rs
