[package]
name = "evm"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv-rt = "0.6"
revm = { git = "https://github.com/powdr-labs/revm", branch = "serde-no-std", default-features = false, features = [ "serde" ] }
runtime = { path = "../../powdr/riscv/runtime" }
models = { path = "../models" }

serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[profile.release]
debug = true

[workspace]
